--- a/gui/styles.qss
+++ b/gui/styles.qss
@@ -102,3 +102,40 @@ QScrollBar:handle:vertical:hover {
 QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical {
     height: 0px;
 }
+
+
+/* --- SPLITTER (Pembatas Panel) --- */
+QSplitter::handle {
+    background-color: #181a1f; /* Warna pemisah gelap */
+}
+
+QSplitter::handle:horizontal {
+    width: 2px;
+    image: url(images/splitter.png); /* Opsional jika ada icon */
+}
+
+QSplitter::handle:hover {
+    background-color: #56b6c2; /* Highlight Cyan saat mouse hover di pembatas */
+}
+
+/* --- TAB WIDGET (Panel Kanan) --- */
+QTabWidget::pane { 
+    border: 1px solid #3e4451;
+    background-color: #23272e;
+}
+
+QTabBar::tab {
+    background: #2c313a;
+    color: #abb2bf;
+    padding: 8px 12px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin-right: 2px;
+}
+
+QTabBar::tab:selected {
+    background: #3e4451;
+    color: #56b6c2; /* Teks aktif jadi cyan */
+    border-bottom: 2px solid #56b6c2;
+    font-weight: bold;
+}
